--- a/index.html
+++ b/index.html
@@ -8,28 +8,19 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>The Wedding of Rehan & Maulidan</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="The Wedding of Rehan and Maulidan" />
+	<meta name="description" content="The Wedding of Anggi & Nanda" />
 	<meta name="keywords" content="wedding, wedding invitation, invitation, the wedding" />
-	<meta name="author" content="Rehan & Maulidan" />
+	<meta name="author" content="Anggi & Nanda" />
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="The Wedding of Rehan and Maulidan"/>
-	<meta property="og:image" content="images/readme/half%20circle-200.png"/>
-	<meta property="og:url" content="https://ngodingsolusi.github.io/the-wedding-of-rehan-maulidan/"/>
-	<meta property="og:site_name" content="The Wedding of Rehan and Maulidan"/>
-	<meta property="og:description" content="The Wedding of Rehan and Maulidan. Open source wedding invitation"/>
+	<meta property="og:title" content="The Wedding of Anggi & Nanda"/>
 
 	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:site" content="@ngodingsolusi" />
-	<meta name="twitter:creator" content="@ngodingsolusi" />
+	<meta name="twitter:site" content="@rizkywis12" />
+	<meta name="twitter:creator" content="@rizkywis12" />
 	<meta name="twitter:title" content="The Wedding of Rehan and Maulidan" />
-	<meta name="twitter:description" content="Open Source Wedding Invitation. The Wedding of Rehan and Maulidan" />
-	<meta name="twitter:image" content="images/readme/half%20circle-200.png" />
-	<meta name="twitter:url" content="https://ngodingsolusi.github.io/the-wedding-of-rehan-maulidan/" />
-
-	<link rel="icon" href="images/readme/half%20circle-200.png">
-
+	<meta name="twitter:description" content="Open Source Wedding Invitation. Anggi & Nanda" />
 
 	<link href='https://fonts.googleapis.com/css?family=Didact+Gothic' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
@@ -574,7 +565,7 @@ var audio = document.getElementById("myaudio");
 		</script>
 
 <script>
-	day = 20; month = 5-1; year = 2022;
+	day = 23; month = 4-1; year = 2023;
 	hour = 18; minute = 0;
 	var d = new Date(year, month, day, hour, minute, 0, 0);
 
