--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>The Wedding of Rehan & Maulidan</title>
+	<title>The Wedding of Nanda & Anggi</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="The Wedding of Anggi & Nanda" />
 	<meta name="keywords" content="wedding, wedding invitation, invitation, the wedding" />
@@ -130,7 +130,7 @@
 <div id="floating-button" class="float">
 	<div class="control-center open">
 		<ul class="right-sidebar">
-			<audio autoplay id="track">
+			<audio controls autoplay loop id="track">
 				<source src="./music/BTS - Crystal Snow [128 kbps].mp3" type="audio/mpeg" />
 			  </audio>
 			  <div id="player-container">
