--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <div id="floating-button" class="float">
 	<div class="control-center open">
 		<ul class="right-sidebar">
-			<audio controls autoplay loop id="track">
+			<audio id="track" autoplay>
 				<source src="./music/BTS - Crystal Snow [128 kbps].mp3" type="audio/mpeg" />
 			  </audio>
 			  <div id="player-container">
