--- a/index.html
+++ b/index.html
@@ -194,8 +194,7 @@
 					<div class="simply-countdown simply-countdown-wedding"></div>
 					<br>
 					<p>
-						<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NW0zY2Ewam91bnUzbW5ub2YwdjVxaTliNmUgcDY4MjI3cmY0dTJ0cWI1b3JrZjEwbTN1NDRAZw&tmsrc=p68227rf4u2tqb5orkf10m3u44%40group.calendar.google.com" target="_blank" class="btn btn-primary btn-sm">Save the date</a><br>
-						<i style="font-size: 15px">*Klik tombol ini untuk menyimpan tanggal pada google kalender</i>
+						<i style="font-size: 15px">CountDown</i>
 					</p>
 				</div>
 			</div>	
