--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-													   <!-- 					<p> CoountDown </p>
+					<h2>Save The Date <a href="calendar.ics" class="btn btn-info"><i class="icon-download2"></i></a></h2>
 				</div>
 			</div>
 			<div class="row">
@@ -299,15 +299,6 @@
 							   class="btn btn-primary">Penunjuk Lokasi <i class="icon-map2"></i></a>
 						</div>
 					</div>
-					<!--<div class="col-md-12 animate-box" style="margin-top: 15px;">
-                        <iframe width="100%" height="400" style="border: 0; border-radius: 5px;" frameborder="0" scrolling="no" src="https://calendar.google.com/calendar/embed?src=p68227rf4u2tqb5orkf10m3u44%40group.calendar.google.com&ctz=Asia%2FJakarta"></iframe>
-                        &lt;!&ndash;<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3971.658582822158!2d95.24281301476557!3d5.468657396034234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30403b4252a49dbd%3A0xa20ea2ca9164dce9!2sLhoknga%20Riverside!5e0!3m2!1sen!2sid!4v1627721471121!5m2!1sen!2sid" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>&ndash;&gt;
-                    </div>-->
-				</div>
-			</div>
-		</div>
-		
-	</div>
 
 	<!--<div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image:url(images/img_bg_5.jpg);">
         <div class="overlay"></div>
