--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ var audio = document.getElementById("myaudio");
 				track.play();
 				//controlBtn.textContent = "Pause";
 				controlBtn.className = "play";
-			}if (track.play) {
+			}else if (track.play) {
 				track.pause();
 				//controlBtn.textContent = "Pause";
 				controlBtn.className = "pause";
