--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 					<div class="desc-bride">
 						<h3>Nanda Wijaya</h3>
 						<p><span style="color: #bf9b73">Anak Pertama, Putra pertama</span><br>
-							<span class="parents-font">Bapak Thio Ingeng / Andi Wijaya</span>
+							<span class="parents-font">Bapak Thio Inseng / Andi Wijaya</span>
 							<br>
 							<span class="parents-font">Ibu Phang Goat Lie</span>
 						</p>
