--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 	<div class="control-center open">
 		<ul class="right-sidebar">
 			<audio autoplay id="track">
-				<source src="./music/BTS - Crystal Snow [128 kbps].mp3" type="audio/mpeg" />
+				<source src="./music/BTS - Crystal Snow [128 kbps].mp3" type="audio/mp3" />
 			  </audio>
 			  <div id="player-container">
 				<div id="play-pause" class="play">Play</div>
