--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ var audio = document.getElementById("myaudio");
 
 	$('#open-invitation').click(function (){
 		$('#overlay').addClass('hide-overlay');
-		playAudio1();
+		playPause();
 		/*yang bagian floating button ada animasinya tapi karena ketutup dulu sama overlay jadinya gak nampak*/
 		/*pengen pas di klik buka undangan baru jalan animasinya*/
 		/*var c = document.getElementsByClassName('right-sidebar');
