--- a/index.html
+++ b/index.html
@@ -443,41 +443,45 @@
 					</div>
 					</div>
 		</div>
-		<div id="fh5co-gallery" style="background: url('images/background/repeat-background/so-white.png'); background-repeat:repeat ">
-			<img class="flower-3-top" src="images/background/flowers/top-2.svg">
-			<img class="flower-4-bottom" src="images/background/flowers/bottom-2.svg">
-	
-			<div class="container">
+		<div id="fh5co-gallery" style="background-color: white; ">
+		<img class="flower-3-top" src="images/background/flowers/top-2.svg">
+		<img class="flower-4-bottom" src="images/background/flowers/bottom-2.svg">
+
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 col-md text-center fh5co-heading animate-box">
+					<h2>Kado</h2>
+					<h4 style="color: #bf9b73">"Kami ingin meminta doa dan dukungan Anda untuk pernikahan kami yang akan datang. Jika Anda ingin memberikan hadiah untuk kami, itu akan sangat dihargai dan membantu kami memulai kehidupan rumah tangga yang bahagia."
+					</h4>
+				</div>
 				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-						<h2>Kado</h2>
-						<h4 style="color: #bf9b73">"Kami ingin meminta doa dan dukungan Anda untuk pernikahan kami yang akan datang. Jika Anda ingin memberikan hadiah untuk kami, itu akan sangat dihargai dan membantu kami memulai kehidupan rumah tangga yang bahagia."
-						</h4>
-					</div>
-					<div class="row">
-						<div class="col-md-10 col-md-offset-1">
-							<div class="col-md-12 col-sm-12 text-center">
-								<div class="event-wrap animate-box">
-									<div class="event-col">
-										<img src="/images/kado.gif" style="width: 500px;" alt="">
-									</div>
-									<button id="modal-btn" class="option-btn-kado">BERI KADO!!</button>
-									<div id="modal" class="modal">
-										<div class="modal-content">
-										  <span class="close">&times;</span>
-										  <div class="desc-groom">
-											<p><span style="color: #bf9b73">Anggi Novianti</span><br>
-												<span class="parents-font">BCA<span style="color: black;">- 6565254751</span> </span>
-												<p><span style="color: #483bdc">Nanda Wijaya</span><br>
-													<span class="parents-font">BCA <span style="color: black;">- 5510348950</span></span>
-					
-										</div>
-										</div>
-									  </div>
-								</div>
+				<div class="col-md-10 col-md-offset-1">
+					<div class="col-md-12 col-sm-12 text-center">
+						<div class="event-wrap animate-box">
+							<div class="event-col">
+								<img src="/images/kado.gif" style="width: 500px;" alt="">
 							</div>
+							<button id="modal-btn" class="option-btn-kado">BERI KADO!!</button>
+							<div id="modal" class="modal">
+								<div class="modal-content">
+								  <span class="close">&times;</span>
+								  <div class="desc-groom">
+									<p><span style="color: #bf9b73">Anggi Novianti</span><br>
+										<span class="parents-font">BCA<span style="color: black;">- 6565254751</span> </span>
+										<p><span style="color: #483bdc">Nanda Wijaya</span><br>
+											<span class="parents-font">BCA <span style="color: black;">- 5510348950</span></span>
+			
+								</div>
+								</div>
+							  </div>
+						</div>
 					</div>
-					</div>
+			</div>
+			</div>
+			</div>
+			
+	</div>
+	</div>
 	<div id="fh5co-testimonial" style="background: url('images/imageedit_2_4239240352.png'); background-repeat:repeat; background-size: cover; border-top: 1px solid #f2f2f2">
 		<img height="400" class="flower-bukutamu-right" style="right: 0;top: 0;position: absolute;" src="images/background/flowers/top-right-3.svg">
 		<img height="400" class="flower-bukutamu-left" style="position: absolute; left: 0; bottom: 0" src="images/background/flowers/bottom-left-3.svg">
