--- a/index.html
+++ b/index.html
@@ -482,6 +482,8 @@
 			
 	</div>
 	</div>
+	</div>
+	</div>
 	<div id="fh5co-testimonial" style="background: url('images/imageedit_2_4239240352.png'); background-repeat:repeat; background-size: cover; border-top: 1px solid #f2f2f2">
 		<img height="400" class="flower-bukutamu-right" style="right: 0;top: 0;position: absolute;" src="images/background/flowers/top-right-3.svg">
 		<img height="400" class="flower-bukutamu-left" style="position: absolute; left: 0; bottom: 0" src="images/background/flowers/bottom-left-3.svg">
