--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@
 					</div>
 					</div>
 		</div>
+		</div>
 		<div id="fh5co-gallery" style="background-color: white; ">
 		<img class="flower-3-top" src="images/background/flowers/top-2.svg">
 		<img class="flower-4-bottom" src="images/background/flowers/bottom-2.svg">
