--- a/index.html
+++ b/index.html
@@ -444,11 +444,11 @@
 					</div>
 		</div>
 		</div>
-		<div id="fh5co-kado" style="background-color: white; ">
+		<div id="fh5co-gallery" style="background-color: white; ">
 		<img class="flower-3-top" src="images/background/flowers/top-2.svg">
 		<img class="flower-4-bottom" src="images/background/flowers/bottom-2.svg">
 
-		<div class="container">
+		<div class="container" id="fh5co-kado">
 			<div class="row">
 				<div class="col-md-12 col-md text-center fh5co-heading animate-box">
 					<h2>Kado</h2>
